attempting to fix ui issues on mobile phone screens

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,6 +6,12 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
+html, body {
+  width: 100%;
+  height: 100%;
+  overflow-x: hidden;
+}
+
 @layer base {
   :root {
     /* Main colors */
